<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cordntrlyot_fireconfig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jalotsav.fireconfig.ActvtyMainFire">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/imgcd_imges"
            app:srcCompat="@drawable/ic_firebase_logo" />

        <TextView
            android:id="@+id/tv_fireconfig_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/firebase_remote_config_sml"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <!--Password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinputlyot_fireconfig_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtinptet_fireconfig_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_sml"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grayA8"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <!--Confirm Password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtinputlyot_fireconfig_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtinptet_fireconfig_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_sml"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@color/grayA8"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <!--Confirm-->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appcmptbtn_fireconfig_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_sml"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/prgrsbr_fireconfig"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="30dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>
